Windows compatible
Dynamic choice of default folder for saving outputs.
First try at .jar export