@@ -31,6 +31,12 @@ Test will use raster3x4.txt.
 ## Project:
 To test the program, compile all and run the App.java program. 
 
+### To run the Raster.Engine_0.1.jar file
+1. Open a command prompt
+2. Navigate to the folder where you have saved the jar file in the file explorer/file system in the command prompt
+3. Type the following command: java -jar --enable-preview Raster.Engine_0.1.jar
+
+
 ### Documents:
 Project Notes: https://hexmet-my.sharepoint.com/:w:/r/personal/balint_reger_leica-geosystems_com/_layouts/15/Doc.aspx?sourcedoc=%7Bfbaeac4d-65b8-4504-b8f4-e88d51059665%7D&action=default&cid=15be940c-6a68-40f3-87d2-353b0fafdff3
 
